--- a/vercel.json
+++ b/vercel.json
@@ -18,5 +18,8 @@
         }
       ]
     }
-  ]
+  ],
+  "buildCommand": "npm run build",
+  "installCommand": "npm install",
+  "framework": "nextjs"
 } 
