--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "geist": "^1.3.1",
+    "js-cookie": "^3.0.5",
     "langchain": "^0.3.19",
     "lucide-react": "^0.344.0",
     "next": "^15.2.0",
@@ -35,6 +36,7 @@
     "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
+    "@types/js-cookie": "^3.0.6",
     "@types/node": "^20.17.22",
     "@types/pdf-parse": "^1.1.4",
     "@types/react": "^18",
